# matrix_templates

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_old  main.cpp
lib/: CMakeLists.txt  MatrixTest.cpp  Rational_number.cpp  StringLongArithmeticTest.cpp
source/: CMakeLists.txt  Complex_number.h  Matrix.h  Rational_number.cpp  Rational_number.h  StringLongArithmetic.cpp  StringLongArithmetic.h
